# so2-final

./: Makefile.am  README.md  configure.ac
include/: BasicCryptoPPWrap.h  cipher.h  host.h  serial.h  socket.h
src/: Makefile.am  app.cc  cipher.cc  client.c  client.cc  host.cc  serial.cc  server.c  socket.cc
tests/: Makefile.am  Testes Unitarios  app_cipher.cc  app_reader.cc  app_writer.cc
